Reduced global variables

--- a/game.html
+++ b/game.html
@@ -7,6 +7,7 @@
  </head>
  <body>
     <div id="score" style="position: absolute; top: 10px; right: 10px; font-size: 24px; color: white;"></div>
+    <div id="highScore"></div>
      <script src="https://cs.wellesley.edu/~cs307/threejs/libs/three-r95.all.js">
          "https://cs.wellesley.edu/~cs307/threejs/libs/three-r80.min.js"
      </script>
