--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
  
  <head>
      <meta charset="utf-8" />
+     <!-- <link rel='stylesheet' type='text/css' href='styles.css'> -->
  </head>
  <body>
-    <div id="score" style="position: absolute; top: 10px; right: 10px; font-size: 24px; color: white;"></div>
+    <div id="score"></div>
     <div id="highScore"></div>
      <script src="https://cs.wellesley.edu/~cs307/threejs/libs/three-r95.all.js">
          "https://cs.wellesley.edu/~cs307/threejs/libs/three-r80.min.js"
