Fixed gameOver() and changed styling

--- a/index.html
+++ b/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 
  <html lang="en">
- 
- <head>
-     <meta charset="utf-8" />
-     <!-- <link rel='stylesheet' type='text/css' href='styles.css'> -->
- </head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content=
+              "width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="./styles.css">
+    </head>
  <body>
-    <div id="score"></div>
-    <div id="highScore"></div>
+    <div id="scoreDisplay">
+        <div id="score"></div>
+        <div id="highScore"></div>
+    </div>
+    <div id="gameOver">Game Over</div>
      <script src="https://cs.wellesley.edu/~cs307/threejs/libs/three-r95.all.js">
          "https://cs.wellesley.edu/~cs307/threejs/libs/three-r80.min.js"
      </script>
