--- a/index.html
+++ b/index.html
@@ -26,5 +26,8 @@
          "https://cs.wellesley.edu/~cs307/threejs/libs/dat.gui-r80.min.js"
      </script>
      <script src="./game.js"></script>
+     <audio controls>
+        <source src="FruitNinjaAudio.mp3" type="audio/mpeg">
+     </audio>
  </body>
  </html>
