--- a/index.html
+++ b/index.html
@@ -6,25 +6,30 @@
         <meta name="viewport" content=
               "width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="./styles.css">
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+        <script src="https://cs.wellesley.edu/~cs307/threejs/libs/three-r95.all.js">
+            "https://cs.wellesley.edu/~cs307/threejs/libs/three-r80.min.js"
+        </script>
+        <script src="https://cs.wellesley.edu/~cs307/threejs/libs/tw-sp21.js">
+            "https://cs.wellesley.edu/~cs307/threejs/libs/tw-fa18.js"
+        </script>
+        <script src="https://cs.wellesley.edu/~cs307/threejs/libs/OrbitControls-r95.js">
+            "https://cs.wellesley.edu/~cs307/threejs/libs/OrbitControls-r80.js"
+        </script>
+        <script src="https://cs.wellesley.edu/~cs307/threejs/libs/dat.gui-r95.js">
+            "https://cs.wellesley.edu/~cs307/threejs/libs/dat.gui-r80.min.js"
+        </script>
+        <script src="./game.js"></script>
     </head>
  <body>
     <div id="scoreDisplay">
         <div id="score"></div>
         <div id="highScore"></div>
     </div>
-    <div id="gameOver">Game Over</div>
-     <script src="https://cs.wellesley.edu/~cs307/threejs/libs/three-r95.all.js">
-         "https://cs.wellesley.edu/~cs307/threejs/libs/three-r80.min.js"
-     </script>
-     <script src="https://cs.wellesley.edu/~cs307/threejs/libs/tw-sp21.js">
-         "https://cs.wellesley.edu/~cs307/threejs/libs/tw-fa18.js"
-     </script>
-     <script src="https://cs.wellesley.edu/~cs307/threejs/libs/OrbitControls-r95.js">
-         "https://cs.wellesley.edu/~cs307/threejs/libs/OrbitControls-r80.js"
-     </script>
-     <script src="https://cs.wellesley.edu/~cs307/threejs/libs/dat.gui-r95.js">
-         "https://cs.wellesley.edu/~cs307/threejs/libs/dat.gui-r80.min.js"
-     </script>
-     <script src="./game.js"></script>
+    <div id="gameOver">
+        <div id="gameOverMsg">Game Over</div>
+        <input id="retry" type="button" value="Retry" onclick="retryGame()"/>
+        <!-- <button class="button" id="retry" value="Retry">Retry</button> -->
+    </div>
  </body>
  </html>
