Added description for project goals

--- a/index.html
+++ b/index.html
@@ -29,5 +29,17 @@
          "https://cs.wellesley.edu/~cs307/threejs/libs/dat.gui-r80.min.js"
      </script>
      <script src="./game.js"></script>
+     <!-- <div id="hwk6-project-description">
+        For the alpha version of the final project, we are aiming to add a retry 
+        button and pausing functionality. In addition, we will work on styling 
+        the game, and we may also add slicing sounds, a background, and slicing 
+        animation, if time permits. 
+
+        For the beta version, we hope to complete any unfinished goals for the alpha 
+        version, as well as make improvements based on the feedback we receive
+        during presentations. We may also include different 
+        levels or game modes, such as having the fruits move more quickly or 
+        having more fruits be launched at a time.
+     </div> -->
  </body>
  </html>
