--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
      <script src="https://cs.wellesley.edu/~cs307/threejs/libs/dat.gui-r95.js">
          "https://cs.wellesley.edu/~cs307/threejs/libs/dat.gui-r80.min.js"
      </script>
+     <script src="https://cs.wellesley.edu/~cs307/lectures-s21/TubeGeometryNew.js"></script>
+     <script src="https://cs.wellesley.edu/~cs307/lectures-s21/TubeRadialGeometry.js"></script>
+
      <script src="./game.js"></script>
      <!-- <div id="hwk6-project-description">
         For the alpha version of the final project, we are aiming to add a retry 
