Updated swiping, documentation, checkFruitSlicing(), variables

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
  <html lang="en">
     <head>
@@ -8,7 +9,7 @@
         <link rel="stylesheet" href="./styles.css">
     </head>
  <body>
-    
+    <h1>Fruit Ninja</h1>
     <div id="scoreDisplay">
         <div id="score"></div>
         <div id="highScore"></div>
@@ -31,19 +32,24 @@
      </script>
      <script src="https://cs.wellesley.edu/~cs307/lectures-s21/TubeGeometryNew.js"></script>
      <script src="https://cs.wellesley.edu/~cs307/lectures-s21/TubeRadialGeometry.js"></script>
-
+     <script import { Box3, Vector3 } from 'three';></script>
      <script src="./game.js"></script>
-     <!-- <div id="hwk6-project-description">
-        For the alpha version of the final project, we are aiming to add a retry 
-        button and pausing functionality. In addition, we will work on styling 
-        the game, and we may also add slicing sounds, a background, and slicing 
-        animation, if time permits. 
+     <!-- 
+     <div id="hwk6-project-description">
+        For the alpha version of the final project, we are aiming to restructure 
+        the code to make it more modular. We also hope to add a retry 
+        button, pausing functionality, and a favicon. In addition, we will work 
+        on styling the game components, adding slicing sounds, a more elaborate b
+        ackground, and splitting or exploding animation, if time permits. 
 
-        For the beta version, we hope to complete any unfinished goals for the alpha 
+        For the beta version, we hope to complete any unfinished goals from  the alpha 
         version, as well as make improvements based on the feedback we receive
-        during presentations. We may also include different 
-        levels or game modes, such as having the fruits move more quickly or 
-        having more fruits be launched at a time.
+        during our presentation. We may also include different levels or game 
+        modes, such as higher levels that involve the fruits moving more quickly 
+        or having more fruits be launched at a time. Further ideas include using 
+        Bezier curves to make fruits like the apple look more realistic,
+        allowing users to save their high scores under a chosen name, letting
+        the user choose from different background scenes, and more. 
      </div> -->
  </body>
  </html>
