--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
      </script>
      <script src="https://cs.wellesley.edu/~cs307/lectures-s21/TubeGeometryNew.js"></script>
      <script src="https://cs.wellesley.edu/~cs307/lectures-s21/TubeRadialGeometry.js"></script>
-     <script import { Box3, Vector3 } from 'three';></script>
      <script src="./game.js"></script>
-     <!-- 
+     
      <div id="hwk6-project-description">
+        <p>
         For the alpha version of the final project, we are aiming to restructure 
         the code to make it more modular. We also hope to add a retry 
-        button, pausing functionality, and a favicon. In addition, we will work 
-        on styling the game components, adding slicing sounds, a more elaborate b
+        button, pausing functionality, a functional banana model, and a favicon. 
+        In addition, we will work on styling the game components, adding slicing sounds, a more elaborate b
         ackground, and splitting or exploding animation, if time permits. 
 
         For the beta version, we hope to complete any unfinished goals from  the alpha 
@@ -50,6 +50,7 @@
         Bezier curves to make fruits like the apple look more realistic,
         allowing users to save their high scores under a chosen name, letting
         the user choose from different background scenes, and more. 
-     </div> -->
+        </p>
+     </div>
  </body>
  </html>
