--- a/description.html
+++ b/description.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Fruit Ninja Demo</title>
+    <title>Fruit Ninja Description</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="apple-touch-icon" sizes="180x180" href="./favicon_io/apple-touch-icon.png">
@@ -15,14 +15,6 @@
 <body>
     <div id="logo">
         <img src="./images/fruitNinja.png" alt="logo" class="logo">
-    </div>
-    <div id="scoreDisplay">
-        <div id="score"></div>
-        <div id="highScore"></div>
-    </div>
-    <div id="gameOver">
-        <div id="gameOverMsg">Game Over</div>
-        <input id="retry" type="button" value="Retry" />
     </div>
     <script src="https://cs.wellesley.edu/~cs307/threejs/libs/three-r95.all.js">
         "https://cs.wellesley.edu/~cs307/threejs/libs/three-r80.min.js"
@@ -38,7 +30,6 @@
     </script>
     <script src="https://cs.wellesley.edu/~cs307/lectures-s21/TubeGeometryNew.js"></script>
     <script src="https://cs.wellesley.edu/~cs307/lectures-s21/TubeRadialGeometry.js"></script>
-    <script src="./game.js"></script>
 </body>
 
 </html>
