Added pausing feature

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     <div id="logo">
         <img src="./assets/images/fruitNinja.png" alt="logo" class="logo">
     </div>
+    <div id="settings">
+        <input id="pause" type="button" value="Pause" />
+    </div>
     <div id="scoreDisplay">
         <div id="score"></div>
         <div id="highScore"></div>
