--- a/description.html
+++ b/description.html
@@ -28,7 +28,7 @@
 
         .image-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+            grid-template-columns: repeat(auto-fit, minmax(600px, 1fr));
             gap: 10px;
         }
 
@@ -46,7 +46,7 @@
 
         .image-card img {
             width: 100%;
-            height: 200px;
+            height: 600px;
             object-fit: cover;
         }
 
@@ -69,8 +69,24 @@
 
     <script>
         const images = [
-            { src: 'image1.jpg', description: 'Image 1 description' },
-            { src: 'image2.jpg', description: 'Image 2 description' },
+            { src: './assets/images/screenshots/bananaSS.png', 
+                description: 'The banana model, made using Bezier curves' },
+            { src: './assets/images/screenshots/orangeSS.png', 
+                description: 'The orange model, made using a sphere and a cylinder' },
+            { src: './assets/images/screenshots/appleSS.png', 
+                description: 'The apple model, made using a sphere and a cylinder' },
+            { src: './assets/images/screenshots/kiwiSS.png', 
+                description: 'The kiwi model, made using a sphere' },
+            { src: './assets/images/screenshots/bombSS.png', 
+                description: 'The bomb, made using a sphere, a cylinder, and Bezier curves' },
+            { src: './assets/images/screenshots/faviconSS.png', 
+                description: 'The Fruit Ninja favicon' },
+            { src: './assets/images/screenshots/logoSS.png', 
+                description: 'The Fruit Ninja logo, displayed at the top of the game page.' },
+            { src: './assets/images/screenshots/particlesSS.png', 
+                description: 'The Fruit Ninja logo, displayed at the top of the game page' },
+            { src: './assets/images/screenshots/gameOverSS.png', 
+                description: 'When a bomb is swiped, the game is over.' },
         ];
 
         // Function to create an image card
