--- a/description.html
+++ b/description.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Beautiful Responsive Page</title>
+    <title>Project Description</title>
 
     <style>
         body {
@@ -83,10 +83,15 @@
                 description: 'The Fruit Ninja favicon' },
             { src: './assets/images/screenshots/logoSS.png', 
                 description: 'The Fruit Ninja logo, displayed at the top of the game page.' },
-            { src: './assets/images/screenshots/particlesSS.png', 
-                description: 'The Fruit Ninja logo, displayed at the top of the game page' },
+            { src: './assets/images/screenshots/pauseSS.png', 
+                description: 'The user can pause and unpause the game.' },
+            { src: './assets/images/screenshots/swipedSS.png', 
+                description: 'When a fruit is swiped, it disappears and an ' +
+                'explosion animation is shown. The score is then incremented.' },
             { src: './assets/images/screenshots/gameOverSS.png', 
-                description: 'When a bomb is swiped, the game is over.' },
+                description: 'When a bomb is swiped, the game is over. ' +
+                'The user can press "retry" to retry the game without losing ' +
+                ' their high score.' },
         ];
 
         // Function to create an image card
